fix player css in docker, jumpy movement

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -20,7 +20,7 @@
   position: relative;
 }
 
-.player {
-  display: inline-block;
+#game-world > div {
+  /* display: inline-block; */
   position: absolute;
 }
